--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
           </svg>
         </button>
       </div>
+      <div class="mob-menu">
+        <button class="mob-menu__close">
+          <svg class="mob-menu__icon">
+            <use></use>
+          </svg>
+        </button>
+      </div>
     </header>
     <!-- маін -->
     <main>
@@ -445,7 +452,7 @@
       </div>
     </footer>
     <!-- модальне вікно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal__btn" type="button" data-modal-close>
           <svg class="modal__icon" width="18px" height="18px">
@@ -502,7 +509,7 @@
           </ul>
           <label class="checkbox form__checkbox">
             <input class="checkbox__input" name="checkbox" type="checkbox" />
-            <span class="checkbox__icon"> </span>
+            <span class="checkbox__icon"></span>
             Погоджуюся з розсилкою та приймаю
             <a class="checkbox__link" href="">Умови договору</a>
           </label>
@@ -510,6 +517,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
