--- a/index.html
+++ b/index.html
@@ -65,9 +65,72 @@
       <div class="mob-menu">
         <button class="mob-menu__close">
           <svg class="mob-menu__icon">
-            <use></use>
+            <use href="./images/icon.svg#icon-close_mob"></use>
           </svg>
         </button>
+        <div class="mob-menu__container">
+          <ul class="list mob-menu__list">
+            <li class="mob-menu__item">
+              <a class="link mob-menu__link" href="./index.html">Студія</a>
+            </li>
+            <li class="mob-menu__item">
+              <a class="link mob-menu__link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="mob-menu__item">
+              <a class="link mob-menu__link" href="">Контакти</a>
+            </li>
+          </ul>
+          <div>
+            <ul class="list mob-menu__list-contacts">
+              <li class="mob-menu__item">
+                <a class="link mob-menu__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+              <li class="mob-menu__item">
+                <a class="link mob-menu__mail" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="list mob-menu__soc-list">
+              <li class="mob-menu__notilia">
+                <a
+                  class="link mob-menu__soc"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram</a
+                >
+              </li>
+              <li class="mob-menu__notilia">
+                <a
+                  class="link mob-menu__soc"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter</a
+                >
+              </li>
+              <li class="mob-menu__notilia">
+                <a
+                  class="link mob-menu__soc"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook</a
+                >
+              </li>
+              <li class="mob-menu__notilia">
+                <a
+                  class="link mob-menu__soc"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-- маін -->
