--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <ul class="list header__list-contacts">
           <li class="header__item">
             <a class="link header__mail" href="mailto:info@devstudio.com">
-              <svg class="link__envelope" width="16px" height="12px">
+              <svg class="link__envelope">
                 <use href="./images/icon.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="header__item">
             <a class="link header__tel" href="tel:+380961111111">
-              <svg class="link__smartphone" width="10px" height="16px">
+              <svg class="link__smartphone">
                 <use href="./images/icon.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -273,7 +273,7 @@
               </div>
             </li>
             <li class="team__card">
-              <img class="team__img" src="./images/img2.jpg" alt="Ольга Репіна" />
+              <img class="team__img" src="./images/img2-mob-1x.jpg" alt="Ольга Репіна" />
               <div class="team__wrapper">
                 <h3 class="team__subtitle">Ольга Рєпіна</h3>
                 <p class="team__position" lang="en">Frontend Developer</p>
@@ -310,7 +310,7 @@
               </div>
             </li>
             <li class="team__card">
-              <img class="team__img" src="./images/img3.jpg" alt="Микола Тарасов" />
+              <img class="team__img" src="./images/img3-mob-1x.jpg" alt="Микола Тарасов" />
               <div class="team__wrapper">
                 <h3 class="team__subtitle">Микола Тарасов</h3>
                 <p class="team__position" lang="en">Marketing</p>
@@ -347,7 +347,7 @@
               </div>
             </li>
             <li class="team__card">
-              <img class="team__img" src="./images/img4.jpg" alt="Михайло Єрмаков" />
+              <img class="team__img" src="./images/img4-mob-1x.jpg" alt="Михайло Єрмаков" />
               <div class="team__wrapper">
                 <h3 class="team__subtitle">Михайло Єрмаков</h3>
                 <p class="team__position" lang="en">UI Designer</p>
