--- a/index.html
+++ b/index.html
@@ -200,13 +200,20 @@
           <h2 class="box__title">Чим ми займаємося</h2>
           <ul class="list box__list">
             <li class="box__item">
-              <img src="./images/box1.jpg" alt="Створення сайтів" width="370" height="294" />
+              <img
+                srcset="./images/box1.jpg 1x, ./images/box1-2x.jpg 2x"
+                src="./images/box1.jpg"
+                alt="Створення сайтів"
+                width="370"
+                height="294"
+              />
               <div class="box__wrapper">
                 <p class="box__text">Десктопні додатки</p>
               </div>
             </li>
             <li class="box__item">
               <img
+                srcset="./images/box2.jpg 1x, ./images/box2-2x.jpg 2x"
                 src="./images/box2.jpg"
                 alt="Створеня програмного забеспечення для смартфонів"
                 width="370"
@@ -218,6 +225,7 @@
             </li>
             <li class="box__item">
               <img
+                srcset="./images/box3.jpg 1x, ./images/box3-2x.jpg 2x"
                 src="./images/box3.jpg"
                 alt="Створення ігр для смартфонів"
                 width="370"
@@ -236,7 +244,26 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="list team__list">
             <li class="team__card">
-              <img class="team__img" src="images/img-mob-1x.jpg" alt="Ігор Дем'яненко" />
+              <picture>
+                <source
+                  srcset="./images/img-desktop-1x.jpg 1x, ./images/img-desktop-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/img-tablet-1x.jpg 1x, ./images/img-tablet-2x.jpg 2x, "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/img-mob-1x.jpg 1x, ./images/img-mob-2x.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+                <img
+                  class="team__img"
+                  src="images/img-mob-1x.jpg"
+                  alt="Ігор Дем'яненко"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, (min-width: 480px) 100vw"
+                />
+              </picture>
               <div class="team__wrapper">
                 <h3 class="team__subtitle">Ігор Дем'яненко</h3>
                 <p class="team__position" lang="en">Product Designer</p>
@@ -273,7 +300,21 @@
               </div>
             </li>
             <li class="team__card">
-              <img class="team__img" src="./images/img2-mob-1x.jpg" alt="Ольга Репіна" />
+              <picture>
+                <source
+                  srcset="./images/img2-desktop-1x.jpg 1x, ./images/img2-desktop-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/img2-tablet-1x.jpg 1x, ./images/img2-tablet-2x.jpg 2x, "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/img2-mob-1x.jpg 1x, ./images/img2-mob-2x.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+                <img class="team__img" src="./images/img2-mob-1x.jpg" alt="Ольга Репіна" />
+              </picture>
               <div class="team__wrapper">
                 <h3 class="team__subtitle">Ольга Рєпіна</h3>
                 <p class="team__position" lang="en">Frontend Developer</p>
@@ -310,7 +351,21 @@
               </div>
             </li>
             <li class="team__card">
-              <img class="team__img" src="./images/img3-mob-1x.jpg" alt="Микола Тарасов" />
+              <picture>
+                <source
+                  srcset="./images/img3-desktop-1x.jpg 1x, ./images/img3-desktop-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/img3-tablet-1x.jpg 1x, ./images/img3-tablet-2x.jpg 2x, "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/img3-mob-1x.jpg 1x, ./images/img3-mob-2x.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+                <img class="team__img" src="./images/img3-mob-1x.jpg" alt="Микола Тарасов" />
+              </picture>
               <div class="team__wrapper">
                 <h3 class="team__subtitle">Микола Тарасов</h3>
                 <p class="team__position" lang="en">Marketing</p>
@@ -347,7 +402,21 @@
               </div>
             </li>
             <li class="team__card">
-              <img class="team__img" src="./images/img4-mob-1x.jpg" alt="Михайло Єрмаков" />
+              <picture>
+                <source
+                  srcset="./images/img4-desktop-1x.jpg 1x, ./images/img4-desktop-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/img4-tablet-1x.jpg 1x, ./images/img4-tablet-2x.jpg 2x, "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/img4-mob-1x.jpg 1x, ./images/img4-mob-2x.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+                <img class="team__img" src="./images/img4-mob-1x.jpg" alt="Михайло Єрмаков" />
+              </picture>
               <div class="team__wrapper">
                 <h3 class="team__subtitle">Михайло Єрмаков</h3>
                 <p class="team__position" lang="en">UI Designer</p>
@@ -440,65 +509,67 @@
     <!-- футер -->
     <footer class="basement">
       <div class="container basement__section">
-        <div>
-          <a class="link logo basement__logo" lang="en" href="./index.html"
-            ><span class="logo__board" lang="en">Web</span>Studio
-          </a>
-          <address class="contacts basement__contacts">
-            <ul class="list">
-              <li class="contacts__item">
-                <a
-                  class="link contacts__address"
-                  href="http://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                >
-                  м. Київ, пр-т Лесі Українки, 26
+        <div class="basement__package">
+          <div>
+            <a class="link logo basement__logo" lang="en" href="./index.html"
+              ><span class="logo__board" lang="en">Web</span>Studio
+            </a>
+            <address class="contacts basement__contacts">
+              <ul class="list">
+                <li class="contacts__item">
+                  <a
+                    class="link contacts__address"
+                    href="http://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    м. Київ, пр-т Лесі Українки, 26
+                  </a>
+                </li>
+                <li class="contacts__item">
+                  <a class="link contacts__mail" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="contacts__item">
+                  <a class="link contacts__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="basement__social">
+            <p class="basement__leader">приєднуйтесь</p>
+            <ul class="social-networks list">
+              <li>
+                <a class="social-networks__card social-networks__card--bgn" href="">
+                  <svg class="social-networks__icon" width="20px" height="20px">
+                    <use href="./images/icon.svg#icon-instagram"></use>
+                  </svg>
                 </a>
               </li>
-              <li class="contacts__item">
-                <a class="link contacts__mail" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+              <li>
+                <a class="social-networks__card social-networks__card--bgn" href="">
+                  <svg class="social-networks__icon" width="20px" height="20px">
+                    <use href="./images/icon.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="contacts__item">
-                <a class="link contacts__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li>
+                <a class="social-networks__card social-networks__card--bgn" href="">
+                  <svg class="social-networks__icon" width="20px" height="20px">
+                    <use href="./images/icon.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="social-networks__card social-networks__card--bgn" href="">
+                  <svg class="social-networks__icon" width="20px" height="20px">
+                    <use href="./images/icon.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="basement__social">
-          <p class="basement__leader">приєднуйтесь</p>
-          <ul class="social-networks list">
-            <li>
-              <a class="social-networks__card social-networks__card--bgn" href="">
-                <svg class="social-networks__icon" width="20px" height="20px">
-                  <use href="./images/icon.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="social-networks__card social-networks__card--bgn" href="">
-                <svg class="social-networks__icon" width="20px" height="20px">
-                  <use href="./images/icon.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="social-networks__card social-networks__card--bgn" href="">
-                <svg class="social-networks__icon" width="20px" height="20px">
-                  <use href="./images/icon.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="social-networks__card social-networks__card--bgn" href="">
-                <svg class="social-networks__icon" width="20px" height="20px">
-                  <use href="./images/icon.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="basement__form">
           <p class="basement__leader">підпишіться на розсилку</p>
