--- a/portfolio.html
+++ b/portfolio.html
@@ -138,30 +138,31 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
-          <ul class="radio list">
-            <li>
-              <button class="radio__button" type="radio" checked>Усі</button>
-            </li>
-            <li>
-              <button class="radio__button" type="radio">Веб-сайти</button>
-            </li>
-            <li>
-              <button class="radio__button" type="radio">Додатки</button>
-            </li>
-            <li>
-              <button class="radio__button" type="radio">Дизайн</button>
-            </li>
-            <li>
-              <button class="radio__button" type="radio">Маркетинг</button>
-            </li>
-          </ul>
-
+          <div class="radio-box">
+            <ul class="radio list">
+              <li>
+                <button class="radio__button" type="radio" checked>Усі</button>
+              </li>
+              <li>
+                <button class="radio__button" type="radio">Веб-сайти</button>
+              </li>
+              <li>
+                <button class="radio__button" type="radio">Додатки</button>
+              </li>
+              <li>
+                <button class="radio__button" type="radio">Дизайн</button>
+              </li>
+              <li>
+                <button class="radio__button" type="radio">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
           <ul class="projects list">
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
                   <img
-                    src="./images/imgport-desktop-1x.jpg"
+                    src="./images/imgport-mob-1x.jpg"
                     alt="відкритий ноутбук"
                     width="370"
                     height="294"
@@ -449,5 +450,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
