--- a/portfolio.html
+++ b/portfolio.html
@@ -161,12 +161,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport-mob-1x.jpg"
-                    alt="відкритий ноутбук"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport-mob-1x.jpg" alt="відкритий ноутбук" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -184,12 +179,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport1-desktop-1x.jpg"
-                    alt="два баскетболіста"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport1-mob-1x.jpg" alt="два баскетболіста" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -209,12 +199,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport2-desktop-1x.jpg"
-                    alt="логотип ресторану"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport2-mob-1x.jpg" alt="логотип ресторану" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -232,12 +217,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport3-desktop-1x.jpg"
-                    alt="навушники"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport3-mob-1x.jpg" alt="навушники" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -255,12 +235,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport4-desktop-1x.jpg"
-                    alt="дві коробки"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport4-mob-1x.jpg" alt="дві коробки" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -278,12 +253,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport5-desktop-1x.jpg"
-                    alt="монітор"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport5-mob-1x.jpg" alt="монітор" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -301,12 +271,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport6-desktop-1x.jpg"
-                    alt="відкрита книжка"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport6-mob-1x.jpg" alt="відкрита книжка" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -324,12 +289,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport7-desktop-1x.jpg"
-                    alt="ярлик"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport7-mob-1x.jpg" alt="ярлик" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -347,12 +307,7 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img
-                    src="./images/imgport8-desktop-1x.jpg"
-                    alt="людина працює на ноутбуці"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./images/imgport8-mob-1x.jpg" alt="людина працює на ноутбуці" />
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
