--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/img-tablet-1x.jpg 1x, ./images/img-tablet-2x.jpg 2x, "
+                  srcset="./images/img-tablet-1x.jpg 1x, ./images/img-tablet-2x.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
@@ -306,7 +306,7 @@
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/img2-tablet-1x.jpg 1x, ./images/img2-tablet-2x.jpg 2x, "
+                  srcset="./images/img2-tablet-1x.jpg 1x, ./images/img2-tablet-2x.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
@@ -357,7 +357,7 @@
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/img3-tablet-1x.jpg 1x, ./images/img3-tablet-2x.jpg 2x, "
+                  srcset="./images/img3-tablet-1x.jpg 1x, ./images/img3-tablet-2x.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
@@ -408,7 +408,7 @@
                   media="(min-width: 1200px)"
                 />
                 <source
-                  srcset="./images/img4-tablet-1x.jpg 1x, ./images/img4-tablet-2x.jpg 2x, "
+                  srcset="./images/img4-tablet-1x.jpg 1x, ./images/img4-tablet-2x.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
