--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,24 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport-mob-1x.jpg" alt="відкритий ноутбук" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport-desktop-1x.jpg 1x,
+                        ./images/imgport-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/imgport-tablet-1x.jpg 1x, ./images/imgport-tablet-2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport-mob-1x.jpg 1x, ./images/imgport-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport-mob-1x.jpg" alt="відкритий ноутбук" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -179,7 +196,27 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport1-mob-1x.jpg" alt="два баскетболіста" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport1-desktop-1x.jpg 1x,
+                        ./images/imgport1-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/imgport1-tablet-1x.jpg 1x,
+                        ./images/imgport1-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport1-mob-1x.jpg 1x, ./images/imgport1-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport1-mob-1x.jpg" alt="два баскетболіста" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -199,7 +236,27 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport2-mob-1x.jpg" alt="логотип ресторану" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport2-desktop-1x.jpg 1x,
+                        ./images/imgport2-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/imgport2-tablet-1x.jpg 1x,
+                        ./images/imgport2-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport2-mob-1x.jpg 1x, ./images/imgport2-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport2-mob-1x.jpg" alt="логотип ресторану" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -217,7 +274,27 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport3-mob-1x.jpg" alt="навушники" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport3-desktop-1x.jpg 1x,
+                        ./images/imgport3-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/imgport3-tablet-1x.jpg 1x,
+                        ./images/imgport3-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport3-mob-1x.jpg 1x, ./images/imgport3-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport3-mob-1x.jpg" alt="навушники" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -235,7 +312,27 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport4-mob-1x.jpg" alt="дві коробки" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport4-desktop-1x.jpg 1x,
+                        ./images/imgport4-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/imgport4-tablet-1x.jpg 1x,
+                        ./images/imgport4-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport4-mob-1x.jpg 1x, ./images/imgport4-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport4-mob-1x.jpg" alt="дві коробки" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -253,7 +350,27 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport5-mob-1x.jpg" alt="монітор" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport5-desktop-1x.jpg 1x,
+                        ./images/imgport5-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/imgport5-tablet-1x.jpg 1x,
+                        ./images/imgport5-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport5-mob-1x.jpg 1x, ./images/imgport5-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport5-mob-1x.jpg" alt="монітор" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -271,7 +388,27 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport6-mob-1x.jpg" alt="відкрита книжка" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport6-desktop-1x.jpg 1x,
+                        ./images/imgport6-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/imgport6-tablet-1x.jpg 1x,
+                        ./images/imgport6-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport6-mob-1x.jpg 1x, ./images/imgport6-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport6-mob-1x.jpg" alt="відкрита книжка" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -289,7 +426,27 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport7-mob-1x.jpg" alt="ярлик" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport7-desktop-1x.jpg 1x,
+                        ./images/imgport7-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/imgport7-tablet-1x.jpg 1x,
+                        ./images/imgport7-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport7-mob-1x.jpg 1x, ./images/imgport7-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport7-mob-1x.jpg" alt="ярлик" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -307,7 +464,27 @@
             <li>
               <a class="link projects__focus" href="">
                 <div class="thumb">
-                  <img src="./images/imgport8-mob-1x.jpg" alt="людина працює на ноутбуці" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/imgport8-desktop-1x.jpg 1x,
+                        ./images/imgport8-desktop-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/imgport8-tablet-1x.jpg 1x,
+                        ./images/imgport8-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/imgport8-mob-1x.jpg 1x, ./images/imgport8-mob-2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <img src="./images/imgport8-mob-1x.jpg" alt="людина працює на ноутбуці" />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
