--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="mob-menu__container">
           <ul class="list mob-menu__list">
             <li class="mob-menu__item">
-              <a class="link mob-menu__link" href="./index.html">Студія</a>
+              <a class="link current mob-menu__link" href="./index.html">Студія</a>
             </li>
             <li class="mob-menu__item">
               <a class="link mob-menu__link" href="./portfolio.html">Портфоліо</a>
