--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
               <a class="link mob-menu__link" href="./index.html">Студія</a>
             </li>
             <li class="mob-menu__item">
-              <a class="link mob-menu__link" href="./portfolio.html">Портфоліо</a>
+              <a class="link current mob-menu__link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="mob-menu__item">
               <a class="link mob-menu__link" href="">Контакти</a>
